[package]
name = "oxmap"
version = "0.2.0"
edition = "2024"
authors = ["Rohan Adwankar <rohan.adwankar@gmail.com>"]
description = "TUI for Mindmaps"
repository = "https://github.com/RohanAdwankar/oxmap"
license = "MIT"
keywords = ["sticky", "notes", "mermaid", "mindmap", "vim"]


[dependencies]
anyhow = "1.0"
crossterm = "0.29"
oxdraw = { version = "0.2.1", default-features = false }
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
